--- a/works.html
+++ b/works.html
@@ -12,7 +12,9 @@
     <div class="container">
         <div class="header"></div>
         <div class="works_main">
+            <!-- WORKS - INDIVIDUAL -->
             <h1 id="individual">WORKS - INDIVIDUAL</h1>
+            <!-- 오늘의 날씨 -->
             <div class="individual_item">
                 <img src="./images/weather.jpg" alt="오늘의 날씨">
                 <div class="works_item_details">
@@ -30,11 +32,12 @@
                             <li>지도 API를 활용하여 위도 경도 확인 등을 진행할 수 있음</li>
                         </ul>
                     <div class="works_btn">
-                        <a href="">소스코드</a>
-                        <a href="">구현주소</a>
+                        <a href="https://github.com/z9in/weatherApp1" target="_blank">소스코드</a>
+                        <a href="https://z9in.github.io/weatherApp1/" target="_blank">구현주소</a>
                     </div>
                 </div>
             </div><!--individual_item. 오늘의 날씨-->
+            <!-- 퍼즐 게임 -->
             <div class="individual_item">
                 <img src="./images/puzzle.jpg" alt="퍼즐">
                 <div class="works_item_details">
@@ -49,11 +52,12 @@
                             <li>background-position 등의 기능을 통해 사진 조각을 따로 준비하지 않고 분리 할 수 있을 것으로 판단</li>
                         </ul>
                     <div class="works_btn">
-                        <a href="">소스코드</a>
-                        <a href="">구현주소</a>
+                        <a href="https://github.com/z9in/puzzle" target="_blank">소스코드</a>
+                        <a href="https://z9in.github.io/puzzle/" target="_blank">구현주소</a>
                     </div>
                 </div>
             </div><!--individual_item. 퍼즐-->
+            <!-- 신년 인사 -->
             <div class="individual_item">
                 <img src="./images/new_year.jpg" alt="신년 인사">
                 <div class="works_item_details">
@@ -69,11 +73,62 @@
                             <li>비밀번호 암호화 기능 추가 및 DB파일 구성을 통한 보안 정책 향상 필요</li>
                         </ul>
                     <div class="works_btn">
-                        <a href="">소스코드</a>
-                        <a href="">구현주소</a>
+                        <a href="https://github.com/z9in/newyear" target="_blank">소스코드</a>
+                        <a href="https://port-0-newyear-422t024lbonwoan.gksl2.cloudtype.app/" target="_blank">구현주소</a>
                     </div>
                 </div>
             </div><!--individual_item.새해-->
+            <!-- WORKS - INDIVIDUAL 끝 -->
+
+            <!-- WORKS - TEAM -->
+            <h1 id="team">WORKS - TEAM</h1>
+            <!-- team project 1 -->
+            <div class="team_item">
+                <img src="./images/team_1.jpg" alt="tem_project_1">
+                <h2>TEAM PROJECT 1</h2>
+                <div class="works_item_details">
+                    <h3>주요 활동 및 역할</h3>
+                        <ul>
+                            <li>연구정보, 제품정보 페이지 작성</li>
+                            <li>HTML, CSS, JAVASCRIPT 활용 제품정보 페이지 내 제품검색 및 정렬 기능 구형</li>
+                        </ul>
+                </div>
+                <div class="works_item_details">
+                    <h3>개선 가능성</h3>
+                        <ul>
+                            <li>제품 목록 작성 시 HTML 내부에 태그 목록으로 사전 제품 리스트 반영 후 display 속성을 활용하여 제품이 보여지도록 하였음</li>
+                            <li>json파일 등을 활용 제품 목록을 외부에 두고 불러오는 형식이 더욱 효율적일 것</li>
+                        </ul>
+                </div>
+                <div class="works_btn">
+                    <a href="https://github.com/z9in/project_DW_home" target="_blank">소스코드</a>
+                    <a href="https://z9in.github.io/project_DW_home/" target="_blank">구현주소</a>
+                </div>
+            </div> <!-- team project 1 끝 -->
+             <!-- team project 2 -->
+             <div class="team_item">
+                <img src="./images/team_2.jpg" alt="tem_project_2">
+                <h2>TEAM PROJECT 2</h2>
+                <div class="works_item_details"> 
+                    <h3>주요 활동 및 역할</h3>
+                        <ul>
+                            <li>sqlite를 활용한 데이터베이스 구축</li>
+                            <li>PRODUCT 페이지 작성 및 기능 구현</li>
+                            <li>찜목록, 장바구니 임시 저장 기능 구현</li>
+                        </ul>
+                    </div>
+                    <div class="works_item_details"> 
+                    <h3>개선 가능성</h3>
+                        <ul>
+                            <li>로그인관련 토큰, 웹세션 등을 활용하여 보안성을 강화할 수 있을 것</li>
+                            <li>데이터베이스 설계 시 회원 개인정보와 회원의 관심 상품 목록을 이원화하여 관리하는 것이 효율성을 높일 수 있을 것</li>
+                        </ul>
+                </div>
+                <div class="works_btn">
+                    <a href="https://github.com/z9in/gilmaro" target="_blank">소스코드</a>
+                    <a href="https://port-0-gilmaro-422t024lbonwoan.gksl2.cloudtype.app/index" target="_blank">구현주소</a>
+                </div>
+            </div> <!-- team project 2 -->
         </div>
     </div>
     <script src="./js/header.js"></script>
