모바일 버전 업로드

--- a/about.htm
+++ b/about.htm
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" media="all and (min-width:768px)">
+    <link rel="stylesheet" href="./css/style_mobile.css" media="all and (max-width:768px)">
     <link rel="stylesheet" href="./css/about.css">
 </head>
 <body>
@@ -19,20 +20,24 @@
                     <li>권동환(Kwon Dong hwan), 1983.07.27.</li>
                     <li class="about_details_link"><a href="mailto:z9in21@naver.com">E-mail</a></li>
                     <span class="about_details_link_span">|</span>
-                    <li class="about_details_link"><a href="https://github.com/z9in" target="_blank" >GitHub</a></li>
+                    <li class="about_details_link">
+                      <a href="https://github.com/z9in" target="_blank">
+                        GitHub
+                      </a>
+                    </li>
                     <span class="about_details_link_span">|</span>
                     <li class="about_details_link"><a href="tel:010-8618-0735">phone</a></li>
                 </ul>         
             </div>
             <div class="about_experience about_details">
-                <h2>about_experience</h2>
+                <h2>Experience</h2>
                 <ul class="about_details_text">
                     <li>UI/UX 웹디자인(웹퍼블리셔&프론트엔드개발)실무(2022.08.~2022.02.)</li>
                     <li>2014.05.~2022.07. 중소기업 사무직 업무: 인사노무관리, 영업 및 현장 관리</li>
                 </ul>   
             </div>
             <div class="about_skills about_details">
-                <h2>about_experience</h2>
+                <h2>Skills</h2>
                 <ul class="about_details_text">
                     <li>HTML5, CSS3</li>
                     <li>JAVASCRIPT : J-QUERY, REACT</li>
