--- a/works.html
+++ b/works.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" media="all and (min-width:768px)">
+    <link rel="stylesheet" href="./css/style_mobile.css" media="all and (max-width:768px)">
     <link rel="stylesheet" href="./css/works.css">
 </head>
 <body>
