--- a/works.html
+++ b/works.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>kwon's portfolios</title>
     <link rel="stylesheet" href="./css/style.css" media="all and (min-width:768px)">
     <link rel="stylesheet" href="./css/style_mobile.css" media="all and (max-width:768px)">
     <link rel="stylesheet" href="./css/works.css">
@@ -15,49 +15,69 @@
         <div class="works_main">
             <!-- WORKS - INDIVIDUAL -->
             <h1 id="individual">WORKS - INDIVIDUAL</h1>
-            <!-- 오늘의 날씨 -->
-            <div class="individual_item">
-                <img src="./images/weather.jpg" alt="오늘의 날씨">
-                <div class="works_item_details">
-                    <h2>오늘의 날씨</h2>
-                    <h3>주요 구현 내용</h3>
-                        <ul>
-                            <li>OpenWeatherMap API 활용</li>
-                            <li>클릭 시 우측 그리드에 해당 지역 날씨 상세정보 확인 반영</li>
-                            <li>지도 내 지역 hover 시 이미지상자를 띄워 날씨 이미지 반영</li>
-                            <li>지역 구분은 지도 위에 박스그리드 씌어 구분</li>
-                        </ul>
-                    <h3>개선 가능성</h3>
-                        <ul>
-                            <li>지도 위 그리드 생성 시 HTML 페이지 내에 작성하였으나 자바스크립트 createEliment 등을 생성한다면 더 편리하고 상세하게 작성 가능</li>
-                            <li>지도 API를 활용하여 위도 경도 확인 등을 진행할 수 있음</li>
-                        </ul>
-                    <div class="works_btn">
-                        <a href="https://github.com/z9in/weatherApp1" target="_blank">소스코드</a>
-                        <a href="https://z9in.github.io/weatherApp1/" target="_blank">구현주소</a>
-                    </div>
-                </div>
-            </div><!--individual_item. 오늘의 날씨-->
-            <!-- 퍼즐 게임 -->
-            <div class="individual_item">
-                <img src="./images/puzzle.jpg" alt="퍼즐">
-                <div class="works_item_details">
-                    <h2>퍼즐 게임</h2>
-                    <h3>주요 구현 내용</h3>
-                        <ul>
-                            <li>시작 시 또는 리세 버튼 클릭 시 사진이 무작위로 섞임</li>
-                            <li>첫번째 클릭 시 조각 정보 저장, 두번째 클릭 시 조각 이동 및 이동된 위치의 조각 정보 저장</li>
-                        </ul>
-                    <h3>개선 가능성</h3>
-                        <ul>
-                            <li>background-position 등의 기능을 통해 사진 조각을 따로 준비하지 않고 분리 할 수 있을 것으로 판단</li>
-                        </ul>
-                    <div class="works_btn">
-                        <a href="https://github.com/z9in/puzzle" target="_blank">소스코드</a>
-                        <a href="https://z9in.github.io/puzzle/" target="_blank">구현주소</a>
-                    </div>
-                </div>
-            </div><!--individual_item. 퍼즐-->
+            {/* <!-- 오늘의 날씨 --> */}
+        <div className="individual_item">
+          <img
+            src="https://z9in.github.io/myhome/images/weather_react.jpg"
+            alt="오늘의 날씨"
+          />
+          <div className="works_item_details">
+            <h2>오늘의 날씨</h2>
+            <h3>주요 구현 내용</h3>
+            <ul>
+              <li>OpenWeatherMap API 활용</li>
+              <li>접속 시 상단 지도를 통해 현재 위치 표시</li>
+              <li>하단 정보 창에 현재 온도와 날씨 정보 표시</li>
+              <li>지도 내 특정 위치 클릭(탭) 시 해당 지역의 날씨 확인</li>
+            </ul>
+            <h3>개선 가능성</h3>
+            <ul>
+              <li>expo를 사용하지 않고 빌드 및 배포할 수 있도록 개발</li>
+              <li>native의 기능들을 활용할 수 있도록 방향 설계 필요</li>
+              <li>지도 클릭 외에 지역 선택 혹은 검색할 수 있는 기능 반영</li>
+            </ul>
+            <div className="works_btn">
+              <a href="https://github.com/z9in/weather_app_react_native" target="_blank">
+                소스코드
+              </a>
+              <a href="https://z9in.github.io/weatherApp1/" target="_blank">
+                다운로드
+              </a>
+            </div>
+          </div>
+        </div>
+        {/* <!-- 퍼즐 게임 --> */}
+        <div className="individual_item">
+          <img
+            src="https://z9in.github.io/myhome/images/toilet_react.jpg"
+            alt="퍼즐"
+            style={{ Width: "100px", height: "100%" }}
+          />
+          <div className="works_item_details">
+            <h2>공중화장실 검색</h2>
+            <h3>주요 구현 내용</h3>
+            <ul>
+              <li>공공데이터 활용 : 경기도 공중화장실 위치 데이터</li>
+              <li>카카오 MAP API활용</li>
+            </ul>
+            <h3>개선 가능성</h3>
+            <ul>
+              <li>추가적인 자료를 수집, 전국 기준으로 진행</li>
+              <li>지역 확인 시 주소가 아닌 키워드로 검색 가능토록 방법 모색</li>
+            </ul>
+            <div className="works_btn">
+              <a
+                href="https://github.com/z9in/toiletSearch_react"
+                target="_blank"
+              >
+                소스코드
+              </a>
+              <a href="https://web-toiletsearch-react-422t024lbonwoan.gksl2.cloudtype.app/" target="_blank">
+                구현주소
+              </a>
+            </div>
+          </div>
+        </div>
             <!-- 신년 인사 -->
             <div class="individual_item">
                 <img src="./images/new_year.jpg" alt="신년 인사">
