--- a/works.html
+++ b/works.html
@@ -80,7 +80,7 @@
         </div>
             <!-- 신년 인사 -->
             <div class="individual_item">
-                <img src="./images/new_year.jpg" alt="신년 인사">
+                <img style="width: 610px; height: 410px;" src="./images/new_year.jpg" alt="신년 인사">
                 <div class="works_item_details">
                     <h2>신년 인사</h2>
                     <h3>주요 구현 내용</h3>
