--- a/works.html
+++ b/works.html
@@ -16,12 +16,12 @@
             <!-- WORKS - INDIVIDUAL -->
             <h1 id="individual">WORKS - INDIVIDUAL</h1>
             {/* <!-- 오늘의 날씨 --> */}
-        <div className="individual_item">
+        <div class="individual_item">
           <img
             src="https://z9in.github.io/myhome/images/weather_react.jpg"
             alt="오늘의 날씨"
           />
-          <div className="works_item_details">
+          <div class="works_item_details">
             <h2>오늘의 날씨</h2>
             <h3>주요 구현 내용</h3>
             <ul>
@@ -36,24 +36,24 @@
               <li>native의 기능들을 활용할 수 있도록 방향 설계 필요</li>
               <li>지도 클릭 외에 지역 선택 혹은 검색할 수 있는 기능 반영</li>
             </ul>
-            <div className="works_btn">
+            <div class="works_btn">
               <a href="https://github.com/z9in/weather_app_react_native" target="_blank">
                 소스코드
               </a>
-              <a href="https://z9in.github.io/weatherApp1/" target="_blank">
+<!--               <a href="#" target="_blank">
                 다운로드
-              </a>
+              </a> -->
             </div>
           </div>
         </div>
         {/* <!-- 퍼즐 게임 --> */}
-        <div className="individual_item">
+        <div class="individual_item">
           <img
             src="https://z9in.github.io/myhome/images/toilet_react.jpg"
             alt="퍼즐"
             style={{ Width: "100px", height: "100%" }}
           />
-          <div className="works_item_details">
+          <div class="works_item_details">
             <h2>공중화장실 검색</h2>
             <h3>주요 구현 내용</h3>
             <ul>
@@ -65,7 +65,7 @@
               <li>추가적인 자료를 수집, 전국 기준으로 진행</li>
               <li>지역 확인 시 주소가 아닌 키워드로 검색 가능토록 방법 모색</li>
             </ul>
-            <div className="works_btn">
+            <div class="works_btn">
               <a
                 href="https://github.com/z9in/toiletSearch_react"
                 target="_blank"
