--- a/works.html
+++ b/works.html
@@ -15,7 +15,7 @@
         <div class="works_main">
             <!-- WORKS - INDIVIDUAL -->
             <h1 id="individual">WORKS - INDIVIDUAL</h1>
-            {/* <!-- 오늘의 날씨 --> */}
+           <!-- 오늘의 날씨 -->
         <div class="individual_item">
           <img
             src="https://z9in.github.io/myhome/images/weather_react.jpg"
@@ -46,7 +46,7 @@
             </div>
           </div>
         </div>
-        {/* <!-- 퍼즐 게임 --> */}
+         <!-- 퍼즐 게임 -->
         <div class="individual_item">
           <img
             src="https://z9in.github.io/myhome/images/toilet_react.jpg"
