--- a/about.htm
+++ b/about.htm
@@ -39,9 +39,18 @@
             <div class="about_skills about_details">
                 <h2>Skills</h2>
                 <ul class="about_details_text">
-                    <li>HTML5, CSS3</li>
-                    <li>JAVASCRIPT : J-QUERY, REACT</li>
-                    <li>NODE.JS</li>
+                    <li>
+              <img
+                src="https://skillicons.dev/icons?i=figma,html,css,js,jquery"
+                alt="icons"
+              />
+            </li>
+            <li>
+              <img
+                src="https://skillicons.dev/icons?i=react,nodejs,express,sqlite"
+                alt=""
+              />
+            </li>
                 </ul>             
             </div>
             
