--- a/index.html
+++ b/index.html
@@ -4,7 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="og:site_name" content="권동환 포트폴리오 홈페이지" />
+    <meta name="og:title" content="권동환의 홈페이지" />
+    <meta name="og:description" content="권동환의 홈페이지입니다." />
+    <meta name="og:type" content="website" />
+    <meta
+      name="keywords"
+      content="권동환, 포트폴리오, portfolio, javascript, html, css, react, frontend, 프론트엔드"
+    />
+    <meta name="author" content="권동환" />
+    <meta
+      name="description"
+      property="og:description"
+      content="권동환의 Frontend 포트폴리오입니다."
+    />
+    <link
+      rel="shortcut icon"
+      href="https://z9in.github.io/gilmaroimages/home_images/favicon.png"
+      type="image/png"
+      sizes="16x11"
+    />
+    <title>kwon's portfolios</title>
     <link rel="stylesheet" href="./css/style.css" media="all and (min-width:768px)">
     <link rel="stylesheet" href="./css/style_mobile.css" media="all and (max-width:768px)">
     <link rel="stylesheet" href="./css/home.css">
