--- a/works.html
+++ b/works.html
@@ -24,7 +24,7 @@
         <div class="screen">
           <div class="item_img">
             <img
-              src="https://z9in.github.io/myhome/images/weather_react.jpg"
+              src="https://z9in.github.io/myhome/images/weather.jpg"
               alt="오늘의 날씨"
             />
           </div>
@@ -73,24 +73,24 @@
           <div class="slate">
             <div class="item">
               <img
-                src="https://z9in.github.io/myhome/images/weather_react.jpg"
+                src="https://z9in.github.io/myhome/images/weather.jpg"
                 alt="weather_app"
               />
             </div>
             <div class="item">
               <img
-                src="https://z9in.github.io/myhome/images/toilet_react.jpg"
+                src="https://z9in.github.io/myhome/images/toilet.jpg"
                 alt="toilet_search"
               />
             </div>
             <div class="item">
-              <img src="./images/new_year.jpg" alt="new_year" />
+              <img src="./images/newyear.jpg" alt="new_year" />
             </div>
             <div class="item">
-              <img src="./images/team_1.jpg" alt="team_project_1" />
+              <img src="./images/team1.jpg" alt="team_project_1" />
             </div>
             <div class="item">
-              <img src="./images/team_2.jpg" alt="team_project_2" />
+              <img src="./images/team2.jpg" alt="team_project_2" />
             </div>
           </div>
           <div class="right_handle">
