--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="btn">
                     <a href="./about.htm">ABOUT</a>
                     <a href="./works.html">WORKS</a>
-                    <a href="https://z9in.github.io/myhome/images/포트폴리오 명세서.pdf">포트폴리오 명세서</a>
+                    <a href="https://z9in.github.io/myhome/images/포트폴리오 명세서.pdf">PDF명세서</a>
                 </div>
             </div>
             
