--- a/works.html
+++ b/works.html
@@ -19,7 +19,18 @@
   </head>
   <body>
     <div class="container">
-      <div class="header"></div>
+       <header>
+            <h1><a href="./index.html"><img src="./images/logoB.svg" alt="logo"></a></h1>
+            <nav>
+                <ul class="depth1">
+                    <li><a href="./index.html">HOME</a></li>
+                    <li><a href="./about.htm">ABOUT</a></li>
+                    <li class="nav_works"><a href="./works.html">WORKS</a>
+                    </li>
+                </ul>
+            </nav>   
+            <img id="nav_open" src="./images/icon _menu_.svg" alt="menu">
+        </header>
       <div class="works_main">
         <div class="screen">
           <div class="item_img">
