--- a/works.html
+++ b/works.html
@@ -58,7 +58,7 @@
             <div class="works_btn">
               <a
                 id="github"
-                href="https://github.com/z9in/weatherApp1"
+                href="https://github.com/z9in/weather_app_react_native"
                 target="_blank"
               >
                 깃허브
